--- a/index.html
+++ b/index.html
@@ -1,97 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ORION SEGURANÇA</title>
-
-  <meta name="referrer" content="no-referrer" />
-  <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), geolocation=(), payment=(), usb=()" />
-
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    base-uri 'none';
-    form-action 'none';
-    object-src 'none';
-    frame-ancestors 'none';
-    img-src 'self' data:;
-    font-src 'self';
-    style-src 'self';
-    script-src 'self';
-    connect-src 'self';
-  " />
-
-  <link rel="stylesheet" href="./style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ORION SEGURANÇA</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <div class="top-bar">
-    <div class="logo">
-      🛡️ ORION SEGURANÇA
+<header>
+  <div class="logo">🛡️ ORION SEGURANÇA</div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#sobre">Sobre</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#contato">Contato</a>
+  </nav>
+</header>
+
+<section id="home" class="hero">
+  <h1>Proteção Digital Corporativa</h1>
+  <p>Segurança avançada para empresas e profissionais.</p>
+  <button class="primary-btn">Solicitar Análise Gratuita</button>
+</section>
+
+<section id="sobre" class="section">
+  <h2>Sobre a ORION</h2>
+  <p><strong>CNPJ:</strong> 00.000.000/0001-00</p>
+
+  <div class="grid-3">
+    <div class="card">
+      <h3>Missão</h3>
+      <p>Proteger empresas contra ameaças digitais com tecnologia avançada.</p>
     </div>
-    <div class="status">
-      ● SISTEMA OPERACIONAL
+    <div class="card">
+      <h3>Visão</h3>
+      <p>Ser referência nacional em segurança cibernética corporativa.</p>
+    </div>
+    <div class="card">
+      <h3>Valores</h3>
+      <p>Ética, inovação, responsabilidade e compromisso com o cliente.</p>
     </div>
   </div>
+</section>
 
-  <div class="container">
+<section id="servicos" class="section dark">
+  <h2>Serviços Ativos</h2>
 
-    <div class="card main-card">
-      <h2>Central de Monitoramento</h2>
-
-      <div class="counter">
-        <div class="number" id="threatCount">0</div>
-        <div class="label">AMEAÇAS BLOQUEADAS</div>
-      </div>
-
-      <div class="stats">
-        <div class="stat-box">
-          <div class="stat-value" id="blockedIPs">0</div>
-          <div class="stat-label">IPs Bloqueados</div>
-        </div>
-
-        <div class="stat-box">
-          <div class="stat-value" id="scansCount">0</div>
-          <div class="stat-label">Verificações</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <h2>Serviços Ativos</h2>
-
-      <div class="service">
-        <span>Firewall Corporativo</span>
-        <span class="badge active">ATIVO</span>
-      </div>
-
-      <div class="service">
-        <span>Monitoramento de Intrusão</span>
-        <span class="badge active">ATIVO</span>
-      </div>
-
-      <div class="service">
-        <span>Proteção Anti-Malware</span>
-        <span class="badge active">ATIVO</span>
-      </div>
-
-      <div class="service">
-        <span>Modo Discreto de Rede</span>
-        <span class="badge inactive">INATIVO</span>
-      </div>
-    </div>
-
-    <div class="card">
-      <h2>Log do Sistema</h2>
-
-      <div class="log">
-        Sistema iniciado com sucesso.
-      </div>
-    </div>
-
+  <div class="service-card">
+    <span>Firewall Corporativo</span>
+    <button class="toggle active">ATIVO</button>
   </div>
 
-  <script src="./app.js" defer></script>
+  <div class="service-card">
+    <span>Monitoramento 24h</span>
+    <button class="toggle active">ATIVO</button>
+  </div>
+
+  <div class="service-card">
+    <span>Proteção Anti-Malware</span>
+    <button class="toggle">INATIVO</button>
+  </div>
+
+  <div class="service-card">
+    <span>Auditoria de Segurança</span>
+    <button class="toggle active">ATIVO</button>
+  </div>
+</section>
+
+<section id="contato" class="section">
+  <h2>Contato Comercial</h2>
+
+  <form>
+    <input type="text" placeholder="Nome">
+    <input type="email" placeholder="Email">
+    <textarea placeholder="Mensagem"></textarea>
+    <button class="primary-btn">Enviar Solicitação</button>
+  </form>
+</section>
+
+<footer>
+  © 2026 ORION SEGURANÇA • Todos os direitos reservados
+</footer>
+
+<script src="app.js"></script>
 </body>
 </html>
